# AI_twin_dashboard

./: .gitignore  README.md
backend/: README.md  pyproject.toml  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  activities.py  charts.py  metrics.py  retention.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  responses.py
backend/app/utils/: __init__.py  helpers.py
backend/docs/: database-schema.md
backend/scripts/: add_message_type.py  generate_data.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Attributions.md  index.css  vite-env.d.ts
frontend/src/components/: ActivityCharts.tsx  DateRangePicker.tsx  FeatureDistribution.tsx  FeatureEngagement.tsx  FeatureUsage.tsx  HourlyActivity.tsx  MetricsOverview.tsx  Navbar.tsx  OrganizationLeaderboard.tsx  RecentActivity.tsx  UserRetention.tsx
frontend/src/docs/: database-schema.md
frontend/src/pages/: Activities.tsx  ActivityDetailPage.tsx
frontend/src/utils/: api.ts  mockData.ts
